--- a/css/styles.css
+++ b/css/styles.css
@@ -263,10 +263,10 @@ div.background {
 .our-team-list {
   display: flex;
 }
-.our-team-list li:not(:last-child) {
+.our-team-list > li:not(:last-child) {
   margin-right: 30px;
 }
-.our-team-list li {
+.our-team-list > li {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -292,6 +292,36 @@ div.background {
   margin-top: 0;
   margin-bottom: 0;
 }
+/* Список соцсетей */
+.social-network-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+.social-network-list > li:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-network-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+.social-network-logo {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+}
+.social-network-item:hover .social-network-logo {
+  fill: #ffffff;
+}
+.social-network-item:hover {
+  background-color: var(--accent-text-color);
+}
+
 /* ____________________Постоянные клиенты____________________ */
 .clients-list {
   display: flex;
