--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,21 @@ div.background {
   margin-top: 0;
   margin-bottom: 50px;
 }
+.thumb {
+  position: relative;
+}
+.what-we-do-list .h3 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  text-align: center;
+  font-weight: bold;
+  color: #ffffff;
+  padding-top: 22px;
+  padding-bottom: 22px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
 
 /* ________________________Наша команда__________________ */
 .basic-section {
@@ -388,7 +403,7 @@ div.background {
   margin-top: 9px;
   margin-bottom: 9px;
 }
-p.h3 {
+.footer .h3 {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -455,6 +470,32 @@ p.h3 {
 }
 
 /* __________________Примеры работ_________________ */
+.portfolio-thumb {
+  position: relative;
+}
+.legend {
+  position: absolute;
+  top: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  height: 294px;
+  padding: 63px 24px;
+  margin-top: 0;
+  margin-bottom: 0;
+
+  opacity: 0;
+
+  font-size: 18px;
+  line-height: 1.56;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+}
+.portfolio-link:hover .legend {
+  opacity: 1;
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -465,6 +506,7 @@ p.h3 {
   padding: 20px 24px;
 }
 .portfolio-list li {
+  max-width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -494,7 +536,7 @@ p.h3 {
   margin-top: 20px;
   margin-bottom: 4px;
 }
-.portfolio p {
+.portfolio-title {
   color: var(--secondary-text-color);
   font-weight: normal;
   font-size: 16px;
