--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,9 @@ input[type="radio"].visually-hidden {
   letter-spacing: 0.02em;
   list-style-type: none;
   text-decoration: none;
+  transition: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover {
   color: var(--accent-text-color);
@@ -115,6 +118,9 @@ input[type="radio"].visually-hidden {
   text-decoration: none;
   display: flex;
   margin-right: 50px;
+  transition: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts svg {
   margin-right: 10px;
@@ -178,6 +184,8 @@ input[type="radio"].visually-hidden {
   min-height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: none;
+  cursor: pointer;
 
   color: #ffffff;
   font-size: 16px;
@@ -324,11 +332,19 @@ div.background {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition: all;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-network-logo {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+
+  transition: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-network-item:hover .social-network-logo,
 .social-network-item:focus .social-network-logo {
@@ -351,9 +367,17 @@ div.background {
   border-radius: 4px;
   justify-content: center;
   align-items: center;
+
+  transition: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-logo svg {
   fill: #afb1b8;
+
+  transition: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* __________________________________Анимаци при ховере  */
@@ -423,6 +447,10 @@ div.background {
 
 .footer .social-network-item {
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition: all;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer .social-network-item:hover,
 .footer .social-network-item:focus {
@@ -509,12 +537,13 @@ div.background {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   background-color: #f5f4fa;
+
+  transition: all;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.gray-button:hover {
-  color: #ffffff;
-  background-color: var(--accent-text-color);
-}
+.gray-button:hover,
 .gray-button:focus {
   color: #ffffff;
   background-color: var(--accent-text-color);
@@ -571,6 +600,10 @@ div.background {
   max-width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+
+  transition: all;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list li:nth-child(3n) {
   margin-right: 0;
