--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ input[type="radio"].visually-hidden {
 .header-list {
   display: flex;
 }
+
 .header-list > li:not(last-child) {
   margin-right: 50px;
 }
@@ -89,6 +90,7 @@ input[type="radio"].visually-hidden {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
 
   color: var(--primary-text-color);
   font-weight: 500;
@@ -97,13 +99,25 @@ input[type="radio"].visually-hidden {
   letter-spacing: 0.02em;
   list-style-type: none;
   text-decoration: none;
+
   transition: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link:hover {
-  color: var(--accent-text-color);
+
+.link::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-text-color);
+  border-radius: 4px;
+  opacity: 0;
 }
+
+.link:hover,
 .link:focus {
   color: var(--accent-text-color);
 }
@@ -144,7 +158,6 @@ input[type="radio"].visually-hidden {
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
-  /* outline: 2px solid tomato; */
 }
 
 /* ___________________ Главная секция________________ */
@@ -510,6 +523,9 @@ div.background {
 /* ____________Эффект текущей страницы_____________ */
 .link.current {
   color: var(--accent-text-color);
+}
+.link.current::after {
+  opacity: 1;
 }
 
 /*  ______________Кнопки_______________________ */
