--- a/css/styles.css
+++ b/css/styles.css
@@ -568,39 +568,48 @@ div.background {
 /* __________________Примеры работ_________________ */
 .portfolio-thumb {
   position: relative;
+  overflow: hidden;
 }
 .portfolio-thumb::before {
   position: absolute;
-  top: 0;
+
   content: "";
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
   height: 100%;
-  opacity: 0;
+  transform: translateY(101%);
+
+  transition: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .legend {
   position: absolute;
-  top: 0;
+  top: 100%;
+  /* transform: translateY(101%); */
 
   padding: 63px 24px;
   margin-top: 0;
   margin-bottom: 0;
-
-  opacity: 0;
 
   font-size: 18px;
   line-height: 1.56;
   font-style: normal;
   font-weight: normal;
   letter-spacing: 0.03em;
-
   color: #ffffff;
+
+  transition: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover .legend {
-  opacity: 1;
+  transform: translateY(-100%);
+  /* top: 0; */
 }
+
 .portfolio-link:hover .portfolio-thumb::before {
-  opacity: 1;
+  transform: translateY(0);
 }
 
 .portfolio-list {
